styles/typography.css
/* ... */
p[autocapitalize=on]::first-letter {
  color: Canvas;
  display: flow-root;
  background: inherit;
}

[autocapitalize=words]{ text-transform: capitalize }
[autocapitalize=characters] { text-transform: uppercase }
[autocapitalize=off], [autocapitalize=none] { text-transform: none }

pre, code, kbd, samp {
  padding: 0 0.1618em;
  background-color:  ButtonFace;
}
pre {
  overflow: overlay;
  text-align: initial;
  margin: var(--p-margin);
}
code {
  white-space: initial;
}
pre code {
  margin: var(--line-height);
  font-size:  var(--smaller);
  font-size: smaller;
  white-space: break-spaces;
}
header code, h1 code {
  font-variant-caps: initial;
}

figcaption {
  font-size: 86%;
  font-style: italic;
}

/*
  - http://webtypography.net/2.3.3
  - https://isotropic.co/the-best-css-styling-for-blockquotes
  - https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling
*/
blockquote { /* http://webtypography.net/2.3.3 */
  opacity: 85%;
  font-style: italic;
  padding-block-start: 3ch;
  padding-block-end: 1.682ch;
  quotes: "\201C""\201D";
  border: 0.01618em solid;
  margin: var(--p-margin);
  font-size: var(--larger);
  margin-block-start: var(--line-height);
}
blockquote::before {
  top: 1ch;
  left: 2ch;
  /* width: 100%; */
  opacity: 80%;
  line-height: 1.6182ch;
  position: relative;
  content: open-quote;
  overflow: hidden;
  /* background: pink; */
  display: block;
  width: 1ch;
  height: 1ch;
  text-align: start;
  transform: scale(8);
}
blockquote::after {
  opacity: 40%;
  content: '⤷\2002' attr(cite);
}
blockquote p {
  text-align: start;
}
cite {
  opacity: 75%;
  font-size: var(--smaller);
  white-space: nowrap;
  display: inline-flex;
}
cite::before{
  content: '-'; /* https://en.wikipedia.org/wiki/Dash */
}
blockquote cite, q cite {}
blockquote::after, blockquote cite {
  display: block;
  text-align: end;
  font-size: var(--larger);
  margin: var(--margin-collapse-bugfix) 1.6821ch;
  padding: var(--margin-collapse-bugfix) 1.6821ch;
}
blockquote cite {
}
blockquote cite::before {
  content: normal;
}
q cite {
  max-width: 21ch;
  overflow: hidden;
  vertical-align: middle;
  text-overflow: ellipsis;
  font-size: var(--smallest);
}

small
  { font-size: var(--smaller) }

sub, sup { /* Prevent `sub` and `sup` elements from affecting the line height in all browsers. */
vertical-align: unset;
}
sup {
  position: relative;
  top: -.418em;
}
sub {
  position: relative;
  top: 0.418em;
}

svg
 { vertical-align: middle }

address { }
li address
  { margin: var(--margin-collapse-bugfix) }


/* Table styling */
table {
  font-size: small;
  margin: 1ch auto;
}
table::before, table::after {
  text-indent: 1ch;
  margin-inline: 1ch;
}
table::before { margin-block-start: 1ch }
table::after { margin-block-end: 1ch }

table > * { margin-inline: 1ch }
table tr > * {
  text-align: inherit;
  line-height: calc(1em * var(--GOLDEN-RATIO));
}
table tr::before, table tr::after,
table tr > *::before, table tr > *::after {
  font-size: smaller;
  text-align: center;
  white-space: nowrap;
  writing-mode: horizontal-tb;
  line-height: calc(1em * var(--GOLDEN-RATIO));
}
table tr > *::before { margin-right: 1ch }
table tr > *::after  { margin-left: 1ch }

table > thead, table > tfoot, table > tbody {}
table > thead::before, table > tfoot::before, table > tbody::before, table > caption::before,
table > thead::after, table > tfoot::after, table > tbody::after, table > caption::after {
  text-indent: 1ch;
  line-height: calc(1em * var(--GOLDEN-RATIO));
}

table > caption {
  padding: 1ch;
  margin: 1ch 0;
  text-align: inherit;
  line-height: calc(var(--GOLDEN-RATIO) * 1em);
}
table > caption::before, table > caption::after {
  margin-block: 1ch;
}

table > thead { padding-inline: 1ch }
table > thead::before, table > thead::after { margin-block: 1ch }

table > tfoot { padding: 1ch }
table > tfoot::before, table > tfoot::after { margin-block: 1ch }

table > tbody { padding-block: 1ch }
table > tbody::before, table > tbody::after { margin-inline: 1ch }

tbody tr { margin-inline: 1ch }

details { /* details */
  margin: var(--margin);
  text-align: var(--text-align);
  padding: 0 0 0 var(--line-height);
}
nav details, nav summary {
  margin: 0;
  padding: 0;
}
body > header details
  { padding-left: 0 }
nav  details {
  /* display: list-item; */
  list-style-type: '😕';
}
nav > details[open] {
  list-style-type: '😊';
}

summary { /* summary */
  font-weight: bolder;
  padding-bottom: 0.618em;
  font-size: larger;
  margin-left: -1.618em /* compensate for <details> padding */;
}
details > summary
{
  margin-left: 0;
  text-align: start;
}

/* fieldset / legend */
fieldset
  { }
legend {
  font-weight: bold;
  margin: var(--margin);
  font-size: var(--larger);
  padding: var(--margin-collapse-bugfix) var(--line-height);
}

